1.9.5.dev0
 * #954: Fix findmnt command error in the Btrfs hook by switching to parsing JSON output.
 * When the ZFS, Btrfs, or LVM hooks aren't configured, don't try to cleanup snapshots for them.

1.9.4
 * #80 (beta): Add an LVM hook for snapshotting and backing up LVM logical volumes. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #251 (beta): Add a Btrfs hook for snapshotting and backing up Btrfs subvolumes. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #926: Fix a library error when running within a PyInstaller bundle.
 * #950: Fix a snapshot unmount error in the ZFS hook when using nested datasets.
 * Update the ZFS hook to discover and snapshot ZFS datasets even if they are parent/grandparent
   directories of your source directories.
 * Reorganize data source and monitoring hooks to make developing new hooks easier.

1.9.3
 * #261 (beta): Add a ZFS hook for snapshotting and backing up ZFS datasets. See the documentation
   for more information: https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * Remove any temporary copies of the manifest file created in support of the "bootstrap" action.
 * Deprecate the "store_config_files" option at the global scope and move it under the "bootstrap"
   hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/extract-a-backup/#extract-the-configuration-files-used-to-create-an-archive
 * Require the runtime directory to be an absolute path.
 * Add a "--deleted" flag to the "repo-list" action for listing deleted archives that haven't
   yet been compacted (Borg 2 only).
 * Promote the "spot" check from a beta feature to stable.

1.9.2
 * #441: Apply the "umask" option to all relevant actions, not just some of them.
 * #722: Remove the restriction that the "extract" and "mount" actions must match a single